[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/ui/dialogue-system.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/targets/computer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/enemy/spawn-point.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/powerups/powerup-spawn-point.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/scene-manager.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/level-intro.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/cyber-tileset.tres" type="TileSet" id=8]
[ext_resource path="res://src/targets/super-computer.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/level-4.gd" type="Script" id=10]

[node name="Level_4" type="Node2D"]
script = ExtResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue_system" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="Level_intro" parent="CanvasLayer" instance=ExtResource( 6 )]
text = "Level 04 - Super computer"

[node name="scene_manager" parent="." instance=ExtResource( 5 )]
wave_length = 6
wave_multiplier = 4
enemies = 2

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -393218, 18, 0, -393217, 18, 0, -458752, 18, 0, -458751, 18, 0, -458750, 18, 0, -458749, 18, 0, -458748, 18, 0, -458747, 18, 0, -458746, 18, 0, -458745, 18, 0, -458744, 18, 0, -458743, 18, 0, -458742, 18, 0, -458741, 18, 0, -458740, 18, 0, -458739, 18, 0, -458738, 18, 0, -458737, 18, 0, -458736, 18, 0, -458735, 18, 0, -458734, 18, 0, -458733, 18, 0, -458732, 18, 0, -458731, 18, 0, -327682, 18, 0, -327681, 18, 0, -393216, 18, 0, -393215, 18, 0, -393214, 18, 0, -393213, 18, 0, -393212, 18, 0, -393211, 18, 0, -393210, 18, 0, -393209, 18, 0, -393208, 18, 0, -393207, 18, 0, -393206, 18, 0, -393205, 18, 0, -393204, 18, 0, -393203, 18, 0, -393202, 18, 0, -393201, 18, 0, -393200, 18, 0, -393199, 18, 0, -393198, 18, 0, -393197, 18, 0, -393196, 18, 0, -393195, 18, 0, -262146, 18, 0, -262145, 18, 0, -327680, 18, 0, -327679, 18, 0, -327678, 18, 0, -327677, 18, 0, -327676, 18, 0, -327675, 18, 0, -327674, 18, 0, -327673, 18, 0, -327672, 8, 0, -327671, 8, 0, -327670, 18, 0, -327669, 18, 0, -327668, 18, 0, -327667, 18, 0, -327666, 8, 0, -327665, 18, 0, -327664, 18, 0, -327663, 18, 0, -327662, 18, 0, -327661, 18, 0, -327660, 18, 0, -327659, 18, 0, -196610, 18, 0, -196609, 18, 0, -262144, 9, 0, -262143, 18, 0, -262142, 18, 0, -262141, 9, 0, -262140, 18, 0, -262139, 8, 0, -262138, 8, 0, -262137, 8, 0, -262136, 8, 0, -262135, 18, 0, -262134, 18, 0, -262133, 18, 0, -262132, 18, 0, -262131, 18, 0, -262130, 18, 0, -262129, 8, 0, -262128, 8, 0, -262127, 8, 0, -262126, 18, 0, -262125, 18, 0, -262124, 18, 0, -262123, 18, 0, -131074, 18, 0, -131073, 18, 0, -196608, 9, 0, -196607, 18, 0, -196606, 18, 0, -196605, 18, 0, -196604, 18, 0, -196603, 18, 0, -196602, 18, 0, -196601, 18, 0, -196600, 18, 0, -196599, 18, 0, -196598, 18, 0, -196597, 18, 0, -196596, 18, 0, -196595, 18, 0, -196594, 18, 0, -196593, 18, 0, -196592, 18, 0, -196591, 18, 0, -196590, 18, 0, -196589, 18, 0, -196588, 18, 0, -196587, 18, 0, -65538, 18, 0, -65537, 18, 0, -131072, 18, 0, -131071, 18, 0, -131070, 18, 0, -131069, 18, 0, -131068, 18, 0, -131067, 18, 0, -131066, 18, 0, -131065, 18, 0, -131064, 18, 0, -131063, 18, 0, -131062, 18, 0, -131061, 18, 0, -131060, 18, 0, -131059, 18, 0, -131058, 18, 0, -131057, 18, 0, -131056, 18, 0, -131055, 18, 0, -131054, 18, 0, -131053, 18, 0, -131052, 18, 0, -131051, 18, 0, -131050, 18, 0, -2, 18, 0, -1, 18, 0, -65536, 18, 0, -65535, 18, 0, -65534, 18, 0, -65533, 18, 0, -65532, 18, 0, -65531, 18, 0, -65530, 18, 0, -65529, 18, 0, -65528, 18, 0, -65527, 18, 0, -65526, 18, 0, -65525, 18, 0, -65524, 18, 0, -65523, 18, 0, -65522, 18, 0, -65521, 18, 0, -65520, 18, 0, -65519, 8, 0, -65518, 8, 0, -65517, 18, 0, -65516, 18, 0, -65515, 18, 0, -65514, 18, 0, -65513, 18, 0, -65512, 18, 0, -65511, 18, 0, -65510, 18, 0, -65509, 9, 0, -65508, 9, 0, -65507, 9, 0, -65506, 9, 0, -65505, 9, 0, -65504, 9, 0, -65503, 18, 0, 65534, 18, 0, 65535, 18, 0, 0, 18, 0, 1, 18, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 8, 0, 20, 18, 0, 21, 18, 0, 22, 18, 0, 23, 18, 0, 24, 18, 0, 25, 18, 0, 26, 18, 0, 27, 18, 0, 28, 18, 0, 29, 18, 0, 30, 18, 0, 31, 18, 0, 32, 18, 0, 33, 9, 0, 131070, 9, 0, 131071, 9, 0, 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 9, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 18, 0, 65555, 18, 0, 65556, 8, 0, 65557, 8, 0, 65558, 18, 0, 65559, 18, 0, 65560, 18, 0, 65561, 9, 0, 65562, 9, 0, 65563, 9, 0, 65564, 18, 0, 65565, 18, 0, 65566, 18, 0, 65567, 18, 0, 65568, 18, 0, 65569, 18, 0, 196606, 9, 0, 196607, 9, 0, 131072, 18, 0, 131073, 18, 0, 131074, 9, 0, 131075, 9, 0, 131076, 9, 0, 131077, 18, 0, 131078, 18, 0, 131079, 18, 0, 131080, 18, 0, 131081, 18, 0, 131082, 18, 0, 131083, 18, 0, 131084, 18, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 18, 0, 131091, 18, 0, 131092, 18, 0, 131093, 8, 0, 131094, 8, 0, 131095, 8, 0, 131096, 8, 0, 131097, 8, 0, 131098, 8, 0, 131099, 9, 0, 131100, 9, 0, 131101, 18, 0, 131102, 18, 0, 131103, 18, 0, 131104, 18, 0, 131105, 18, 0, 262142, 9, 0, 262143, 9, 0, 196608, 18, 0, 196609, 9, 0, 196610, 9, 0, 196611, 18, 0, 196612, 18, 0, 196613, 18, 0, 196614, 18, 0, 196615, 18, 0, 196616, 18, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 196621, 18, 0, 196622, 18, 0, 196623, 9, 0, 196624, 9, 0, 196625, 9, 0, 196626, 18, 0, 196627, 8, 0, 196628, 18, 0, 196629, 18, 0, 196630, 18, 0, 196631, 18, 0, 196632, 18, 0, 196633, 18, 0, 196634, 18, 0, 196635, 8, 0, 196636, 8, 0, 196637, 9, 0, 196638, 18, 0, 196639, 18, 0, 196640, 18, 0, 196641, 18, 0, 327678, 9, 0, 327679, 9, 0, 262144, 18, 0, 262145, 18, 0, 262146, 18, 0, 262147, 18, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 18, 0, 262156, 18, 0, 262157, 9, 0, 262158, 9, 0, 262159, 18, 0, 262160, 9, 0, 262161, 9, 0, 262162, 8, 0, 262163, 18, 0, 262164, 18, 0, 262165, 18, 0, 262166, 18, 0, 262167, 18, 0, 262168, 18, 0, 262169, 18, 0, 262170, 18, 0, 262171, 18, 0, 262172, 18, 0, 262173, 18, 0, 262174, 18, 0, 262175, 18, 0, 262176, 18, 0, 262177, 18, 0, 393214, 9, 0, 393215, 9, 0, 327680, 18, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 8, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 18, 0, 327692, 18, 0, 327693, 9, 0, 327694, 18, 0, 327695, 9, 0, 327696, 9, 0, 327697, 9, 0, 327698, 9, 0, 327699, 18, 0, 327700, 18, 0, 327701, 18, 0, 327702, 18, 0, 327703, 18, 0, 327704, 18, 0, 327705, 18, 0, 327706, 18, 0, 327707, 18, 0, 327708, 18, 0, 327709, 18, 0, 327710, 18, 0, 327711, 18, 0, 327712, 18, 0, 327713, 18, 0, 458750, 18, 0, 458751, 9, 0, 393216, 9, 0, 393217, 9, 0, 393218, 18, 0, 393219, 18, 0, 393220, 18, 0, 393221, 8, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 8, 0, 393228, 8, 0, 393229, 8, 0, 393230, 8, 0, 393231, 9, 0, 393232, 9, 0, 393233, 9, 0, 393234, 18, 0, 393235, 18, 0, 393236, 18, 0, 393237, 18, 0, 393238, 18, 0, 393239, 18, 0, 393240, 18, 0, 393241, 18, 0, 393242, 18, 0, 393243, 18, 0, 393244, 18, 0, 393245, 18, 0, 393246, 18, 0, 393247, 9, 0, 393248, 18, 0, 393249, 18, 0, 524286, 18, 0, 524287, 9, 0, 458752, 9, 0, 458753, 18, 0, 458754, 18, 0, 458755, 18, 0, 458756, 18, 0, 458757, 8, 0, 458758, 18, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 18, 0, 458765, 9, 0, 458766, 9, 0, 458767, 18, 0, 458768, 18, 0, 458769, 18, 0, 458770, 18, 0, 458771, 18, 0, 458772, 18, 0, 458773, 18, 0, 458774, 18, 0, 458775, 18, 0, 458776, 18, 0, 458777, 18, 0, 458778, 18, 0, 458779, 18, 0, 458780, 18, 0, 458781, 18, 0, 458782, 18, 0, 458783, 9, 0, 458784, 18, 0, 458785, 18, 0, 589822, 18, 0, 589823, 9, 0, 524288, 9, 0, 524289, 18, 0, 524290, 18, 0, 524291, 18, 0, 524292, 18, 0, 524293, 18, 0, 524294, 18, 0, 524295, 18, 0, 524296, 18, 0, 524297, 18, 0, 524298, 18, 0, 524299, 18, 0, 524300, 18, 0, 524301, 18, 0, 524302, 18, 0, 524303, 18, 0, 524304, 18, 0, 524305, 18, 0, 524306, 18, 0, 524307, 18, 0, 524308, 18, 0, 524309, 18, 0, 524310, 18, 0, 524311, 18, 0, 524312, 18, 0, 524313, 18, 0, 524314, 18, 0, 524315, 18, 0, 524316, 18, 0, 524317, 18, 0, 524318, 18, 0, 524319, 9, 0, 524320, 18, 0, 524321, 18, 0, 655358, 18, 0, 655359, 18, 0, 589824, 18, 0, 589825, 18, 0, 589826, 18, 0, 589827, 18, 0, 589828, 18, 0, 589829, 18, 0, 589830, 18, 0, 589831, 18, 0, 589832, 18, 0, 589833, 8, 0, 589834, 8, 0, 589835, 18, 0, 589836, 18, 0, 589837, 18, 0, 589838, 18, 0, 589839, 18, 0, 589840, 18, 0, 589841, 18, 0, 589842, 18, 0, 589843, 18, 0, 589844, 18, 0, 589845, 18, 0, 589846, 18, 0, 589847, 18, 0, 589848, 18, 0, 589849, 18, 0, 589850, 18, 0, 589851, 18, 0, 589852, 18, 0, 589853, 18, 0, 589854, 18, 0, 589855, 9, 0, 589856, 18, 0, 589857, 18, 0, 720895, 18, 0, 655360, 18, 0, 655361, 18, 0, 655362, 18, 0, 655363, 18, 0, 655364, 18, 0, 655365, 18, 0, 655366, 18, 0, 655367, 18, 0, 655368, 18, 0, 655369, 18, 0, 655370, 18, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 655374, 8, 0, 655375, 8, 0, 655376, 8, 0, 655377, 8, 0, 655378, 18, 0, 655379, 18, 0, 655380, 18, 0, 655381, 18, 0, 655382, 18, 0, 655383, 18, 0, 655384, 18, 0, 655385, 18, 0, 655386, 18, 0, 655387, 18, 0, 655388, 18, 0, 655389, 18, 0, 655390, 18, 0, 655391, 18, 0, 655392, 9, 0, 655393, 18, 0, 720896, 18, 0, 720897, 18, 0, 720898, 18, 0, 720899, 8, 0, 720900, 18, 0, 720901, 18, 0, 720902, 18, 0, 720903, 18, 0, 720904, 18, 0, 720905, 18, 0, 720906, 18, 0, 720907, 18, 0, 720908, 18, 0, 720909, 18, 0, 720910, 18, 0, 720911, 18, 0, 720912, 18, 0, 720913, 18, 0, 720914, 18, 0, 720915, 18, 0, 720916, 18, 0, 720917, 18, 0, 720918, 18, 0, 720919, 18, 0, 720920, 8, 0, 720921, 8, 0, 720922, 8, 0, 720923, 18, 0, 720924, 18, 0, 720925, 18, 0, 720926, 18, 0, 720927, 18, 0, 720928, 9, 0, 720929, 9, 0, 786432, 18, 0, 786433, 18, 0, 786434, 18, 0, 786435, 9, 0, 786436, 9, 0, 786437, 18, 0, 786438, 18, 0, 786439, 18, 0, 786440, 18, 0, 786441, 18, 0, 786442, 18, 0, 786443, 18, 0, 786444, 18, 0, 786445, 18, 0, 786446, 18, 0, 786447, 18, 0, 786448, 18, 0, 786449, 18, 0, 786450, 18, 0, 786451, 18, 0, 786452, 18, 0, 786453, 18, 0, 786454, 18, 0, 786455, 8, 0, 786456, 8, 0, 786457, 8, 0, 786458, 18, 0, 786459, 18, 0, 786460, 18, 0, 786461, 18, 0, 786462, 18, 0, 786463, 18, 0, 786464, 18, 0, 786465, 18, 0, 851969, 9, 0, 851970, 9, 0, 851971, 9, 0, 851972, 9, 0, 851973, 9, 0, 851974, 18, 0, 851975, 18, 0, 851976, 18, 0, 851977, 18, 0, 851978, 8, 0, 851979, 8, 0, 851980, 8, 0, 851981, 8, 0, 851982, 8, 0, 851983, 8, 0, 851984, 8, 0, 851985, 8, 0, 851986, 8, 0, 851987, 18, 0, 851988, 18, 0, 851989, 18, 0, 851990, 18, 0, 851991, 18, 0, 851992, 18, 0, 851993, 18, 0, 851994, 18, 0, 851995, 18, 0, 851996, 18, 0, 851997, 18, 0, 851998, 18, 0, 851999, 18, 0, 852000, 18, 0, 852001, 18, 0, 917505, 18, 0, 917506, 9, 0, 917507, 9, 0, 917508, 18, 0, 917509, 9, 0, 917510, 18, 0, 917511, 18, 0, 917512, 18, 0, 917513, 18, 0, 917514, 9, 0, 917515, 18, 0, 917516, 18, 0, 917517, 18, 0, 917518, 18, 0, 917519, 18, 0, 917520, 18, 0, 917521, 18, 0, 917522, 18, 0, 917523, 18, 0, 917524, 18, 0, 917525, 18, 0, 917526, 18, 0, 917527, 18, 0, 917528, 18, 0, 917529, 18, 0, 917530, 18, 0, 917531, 18, 0, 917532, 18, 0, 917533, 18, 0, 917534, 18, 0, 917535, 18, 0, 917536, 18, 0, 917537, 18, 0, 983041, 18, 0, 983042, 18, 0, 983043, 18, 0, 983044, 18, 0, 983045, 8, 0, 983046, 18, 0, 983047, 18, 0, 983048, 18, 0, 983049, 18, 0, 983050, 18, 0, 983051, 9, 0, 983052, 18, 0, 983053, 18, 0, 983054, 18, 0, 983055, 9, 0, 983056, 9, 0, 983057, 9, 0, 983058, 9, 0, 983059, 9, 0, 983060, 9, 0, 983061, 9, 0, 983062, 9, 0, 983063, 18, 0, 983064, 18, 0, 983065, 18, 0, 983066, 18, 0, 983067, 18, 0, 983068, 18, 0, 983069, 18, 0, 983070, 18, 0, 983071, 18, 0, 983072, 18, 0, 983073, 18, 0, 1048577, 18, 0, 1048578, 18, 0, 1048579, 18, 0, 1048580, 18, 0, 1048581, 8, 0, 1048582, 18, 0, 1048583, 18, 0, 1048584, 18, 0, 1048585, 18, 0, 1048586, 18, 0, 1048587, 9, 0, 1048588, 18, 0, 1048589, 18, 0, 1048590, 18, 0, 1114113, 18, 0, 1114114, 18, 0, 1114115, 18, 0, 1114116, 18, 0, 1114117, 8, 0, 1114118, 18, 0, 1114119, 18, 0, 1114120, 18, 0, 1114121, 18, 0, 1114122, 18, 0, 1114123, 9, 0, 1114124, 18, 0, 1114125, 18, 0, 1114126, 18, 0, 1179649, 18, 0, 1179650, 18, 0, 1179651, 18, 0, 1179652, 18, 0, 1179653, 18, 0, 1179654, 18, 0, 1179655, 18, 0, 1179656, 18, 0, 1179657, 9, 0, 1179658, 9, 0, 1179659, 9, 0, 1179660, 18, 0, 1179661, 18, 0, 1179662, 18, 0, 1245185, 18, 0, 1245186, 18, 0, 1245187, 18, 0, 1245188, 18, 0, 1245189, 18, 0, 1245190, 18, 0, 1245191, 18, 0, 1245192, 18, 0, 1245193, 9, 0, 1245194, 9, 0, 1245195, 18, 0, 1245196, 18, 0, 1245197, 18, 0, 1245198, 18, 0, 1310721, 18, 0, 1310722, 18, 0, 1310723, 18, 0, 1310724, 18, 0, 1310725, 18, 0, 1310726, 18, 0, 1310727, 18, 0, 1310728, 18, 0, 1310729, 18, 0, 1310730, 9, 0, 1310731, 18, 0, 1310732, 18, 0, 1310733, 18, 0, 1310734, 18, 0, 1376257, 18, 0, 1376258, 18, 0, 1376259, 18, 0, 1376260, 18, 0, 1376261, 18, 0, 1376262, 18, 0, 1376263, 18, 0, 1376264, 18, 0, 1376265, 18, 0, 1376266, 9, 0, 1376267, 9, 0, 1376268, 18, 0, 1376269, 18, 0, 1376270, 18, 0, 1441794, 18, 0, 1441795, 18, 0, 1441796, 9, 0, 1441797, 18, 0, 1441798, 18, 0, 1441799, 18, 0, 1441800, 18, 0, 1441801, 9, 0, 1441802, 9, 0, 1441803, 18, 0, 1441804, 18, 0, 1441805, 18, 0, 1441806, 18, 0, 1507330, 18, 0, 1507331, 18, 0, 1507332, 18, 0, 1507333, 18, 0, 1507334, 18, 0, 1507335, 18, 0, 1507336, 18, 0, 1507337, 18, 0, 1507338, 18, 0, 1507339, 18, 0, 1507340, 18, 0, 1507341, 18, 0 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262138, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -262129, 7, 0, -262128, 7, 0, -262127, 7, 0, -196602, 7, 0, -196601, 7, 0, -196600, 7, 0, -196599, 7, 0, -196598, 7, 0, -196597, 7, 0, -196596, 7, 0, -196595, 7, 0, -196594, 7, 0, -196593, 7, 0, -196592, 7, 0, -196591, 7, 0, -131066, 7, 0, -131065, 7, 0, -131064, 7, 0, -131063, 7, 0, -131062, 7, 0, -131061, 7, 0, -131060, 7, 0, -131059, 7, 0, -131058, 7, 0, -131057, 7, 0, -131056, 7, 0, -131055, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65519, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 65542, 7, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 7, 0, 65548, 7, 0, 65549, 7, 0, 65550, 7, 0, 65551, 7, 0, 65552, 7, 0, 65553, 7, 0, 131087, 6, 0, 131088, 7, 0, 131089, 7, 0, 196623, 7, 0, 196624, 7, 0, 196625, 7, 0, 196626, 6, 0, 196627, 6, 0, 196628, 6, 0, 196629, 6, 0, 196630, 6, 0, 196631, 6, 0, 196632, 6, 0, 196633, 6, 0, 196634, 6, 0, 262159, 7, 0, 262160, 7, 0, 262161, 7, 0, 262162, 6, 0, 262163, 6, 0, 262164, 6, 0, 262165, 6, 0, 262166, 6, 0, 262167, 6, 0, 262168, 6, 0, 262169, 6, 0, 262170, 6, 0, 327695, 7, 0, 327696, 7, 0, 327697, 7, 0, 327698, 6, 0, 327699, 6, 0, 327700, 6, 0, 327701, 6, 0, 327702, 6, 0, 327703, 6, 0, 327704, 6, 0, 327705, 6, 0, 327706, 6, 0, 393234, 6, 0, 393235, 6, 0, 393236, 6, 0, 393237, 6, 0, 393238, 6, 0, 393239, 6, 0, 393240, 6, 0, 393241, 6, 0, 393242, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 6, 0, 458773, 6, 0, 458774, 6, 0, 458775, 6, 0, 458776, 6, 0, 458777, 6, 0, 458778, 6, 0, 524306, 6, 0, 524307, 6, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 524311, 6, 0, 524312, 6, 0, 524313, 6, 0, 524314, 6, 0, 589842, 6, 0, 589843, 6, 0, 589844, 6, 0, 589845, 6, 0, 589846, 6, 0, 589847, 6, 0, 589848, 6, 0, 589849, 6, 0, 589850, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 655383, 6, 0, 655384, 6, 0, 655385, 6, 0, 655386, 6, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851976, 6, 0, 851977, 6, 0, 917509, 6, 0, 917510, 6, 0, 917511, 6, 0, 917512, 6, 0, 917513, 6, 0, 983045, 6, 0, 983046, 6, 0, 983047, 6, 0, 983048, 6, 0, 983049, 6, 0, 1048581, 6, 0, 1048582, 6, 0, 1048583, 6, 0, 1048584, 6, 0, 1048585, 6, 0, 1114117, 6, 0, 1114118, 6, 0, 1114119, 6, 0, 1114120, 6, 0, 1114121, 6, 0 )

[node name="Building" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -458755, 14, 0, -458754, 2, 0, -458753, 2, 0, -524288, 2, 0, -524287, 2, 0, -524286, 2, 0, -524285, 2, 0, -524284, 2, 0, -524283, 2, 0, -524282, 2, 0, -524281, 2, 0, -524280, 2, 0, -524279, 2, 0, -524278, 2, 0, -524277, 2, 0, -524276, 2, 0, -524275, 2, 0, -524274, 2, 0, -524273, 2, 0, -524272, 2, 0, -524271, 2, 0, -524270, 2, 0, -524269, 2, 0, -524268, 2, 0, -524267, 2, 0, -524266, 15, 0, -393219, 5, 0, -458730, 5, 0, -327683, 5, 0, -393194, 5, 0, -262147, 5, 0, -327675, 14, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -327671, 2, 0, -327670, 2, 0, -327669, 2, 0, -327668, 2, 0, -327667, 2, 0, -327666, 2, 0, -327665, 2, 0, -327664, 2, 0, -327663, 2, 0, -327662, 15, 0, -327658, 5, 0, -196611, 5, 0, -262139, 5, 0, -262126, 5, 0, -262122, 5, 0, -131075, 5, 0, -196603, 5, 0, -196590, 5, 0, -196586, 16, 0, -196585, 15, 0, -65539, 5, 0, -131067, 5, 0, -131054, 5, 0, -131049, 16, 0, -131048, 2, 0, -131047, 2, 0, -131046, 2, 0, -131045, 2, 0, -131044, 2, 0, -131043, 2, 0, -131042, 2, 0, -131041, 2, 0, -131040, 2, 0, -131039, 2, 0, -131038, 15, 0, -3, 5, 0, -65531, 5, 0, -65518, 5, 0, -65502, 5, 0, 65533, 5, 0, 5, 5, 0, 18, 5, 0, 34, 5, 0, 131069, 5, 0, 65541, 5, 0, 65554, 5, 0, 65570, 5, 0, 196605, 5, 0, 131077, 16, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 3, 0, 131090, 16, 0, 131091, 2, 0, 131092, 2, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 2, 0, 131098, 2, 0, 131099, 15, 0, 131106, 5, 0, 262141, 5, 0, 196635, 5, 0, 196642, 5, 0, 327677, 5, 0, 262171, 5, 0, 262178, 5, 0, 393213, 5, 0, 327707, 5, 0, 327714, 5, 0, 458749, 5, 0, 393233, 0, 0, 393243, 5, 0, 393250, 5, 0, 524285, 5, 0, 458769, 5, 0, 458779, 5, 0, 458786, 5, 0, 589821, 5, 0, 524305, 5, 0, 524315, 5, 0, 524322, 5, 0, 655357, 5, 0, 589841, 5, 0, 589851, 5, 0, 589858, 5, 0, 720893, 16, 0, 720894, 15, 0, 655377, 5, 0, 655387, 5, 0, 655394, 5, 0, 786430, 16, 0, 786431, 15, 0, 720913, 16, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 17, 0, 720930, 5, 0, 851967, 5, 0, 786466, 5, 0, 917503, 16, 0, 851968, 15, 0, 851972, 0, 0, 851978, 0, 0, 852002, 5, 0, 917504, 5, 0, 917508, 5, 0, 917514, 5, 0, 917538, 5, 0, 983040, 5, 0, 983044, 5, 0, 983050, 5, 0, 983074, 5, 0, 1048576, 5, 0, 1048580, 5, 0, 1048586, 5, 0, 1048591, 14, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048601, 2, 0, 1048602, 2, 0, 1048603, 2, 0, 1048604, 2, 0, 1048605, 2, 0, 1048606, 2, 0, 1048607, 2, 0, 1048608, 2, 0, 1048609, 2, 0, 1048610, 17, 0, 1114112, 5, 0, 1114116, 5, 0, 1114122, 5, 0, 1114127, 5, 0, 1179648, 5, 0, 1179652, 16, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 17, 0, 1179663, 5, 0, 1245184, 5, 0, 1245199, 5, 0, 1310720, 5, 0, 1310735, 5, 0, 1376256, 5, 0, 1376271, 5, 0, 1441792, 16, 0, 1441793, 15, 0, 1441807, 5, 0, 1507329, 5, 0, 1507342, 14, 0, 1507343, 17, 0, 1572865, 16, 0, 1572866, 2, 0, 1572867, 2, 0, 1572868, 2, 0, 1572869, 2, 0, 1572870, 2, 0, 1572871, 2, 0, 1572872, 2, 0, 1572873, 2, 0, 1572874, 2, 0, 1572875, 2, 0, 1572876, 2, 0, 1572877, 2, 0, 1572878, 17, 0 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 145.903, 79.6873 )

[node name="Computer" parent="." instance=ExtResource( 2 )]
position = Vector2( 155.867, -17.0455 )
frame = 1

[node name="Computer3" parent="." instance=ExtResource( 2 )]
position = Vector2( 230.821, -18.1062 )
frame = 1

[node name="Computer2" parent="." instance=ExtResource( 2 )]
position = Vector2( 121.003, 247.516 )
frame = 1

[node name="Super_computer" parent="." instance=ExtResource( 9 )]
position = Vector2( 363.287, 114.129 )
frame = 1
infect = true

[node name="spawn_points" type="Node2D" parent="."]

[node name="Spawn_point" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -101.709, -159.253 )

[node name="Spawn_point2" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -16.1831, -192.216 )

[node name="Spawn_point3" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 68.0068, -206.916 )

[node name="Spawn_point4" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 166.451, -207.807 )

[node name="Spawn_point5" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 261.332, -209.143 )

[node name="Spawn_point6" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 367.349, -192.216 )

[node name="Spawn_point7" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 446.193, -142.326 )

[node name="Spawn_point8" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 544.192, -122.281 )

[node name="Spawn_point9" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 646.2, -36.7544 )

[node name="Spawn_point10" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 639.964, 69.2625 )

[node name="Spawn_point11" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 640.409, 164.589 )

[node name="Spawn_point12" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 648.427, 268.824 )

[node name="Spawn_point13" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 573.146, 353.905 )

[node name="Spawn_point14" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 441.293, 360.141 )

[node name="Spawn_point15" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 336.167, 376.177 )

[node name="Spawn_point16" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 306.322, 445.667 )

[node name="Spawn_point17" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 195.851, 473.73 )

[node name="Spawn_point18" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( 79.5886, 475.067 )

[node name="Spawn_point19" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -34.8919, 440.767 )

[node name="Spawn_point20" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -66.9642, 330.741 )

[node name="Spawn_point21" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -104.382, 233.188 )

[node name="Spawn_point22" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -124.873, 114.698 )

[node name="Spawn_point23" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -136.009, 27.3903 )

[node name="Spawn_point24" parent="spawn_points" instance=ExtResource( 3 )]
position = Vector2( -134.673, -65.2632 )

[node name="pu_spawn_points" type="Node2D" parent="."]

[node name="Powerup_spawn_point" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 21.8283, -23.466 )

[node name="Powerup_spawn_point2" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 24.6082, 107.046 )

[node name="Powerup_spawn_point3" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 150.216, 140.225 )

[node name="Powerup_spawn_point4" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 493.559, 29.097 )

[node name="Powerup_spawn_point5" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 494.896, 114.178 )

[node name="Powerup_spawn_point6" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 499.796, 218.413 )

[node name="Powerup_spawn_point7" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 354.579, 226.431 )

[node name="Powerup_spawn_point8" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 71.7187, 346.257 )

[node name="Powerup_spawn_point9" parent="pu_spawn_points" instance=ExtResource( 4 )]
position = Vector2( 181.299, 348.93 )

[connection signal="finished_dialogue" from="CanvasLayer/Dialogue_system" to="." method="_on_Dialogue_system_finished_dialogue"]
[connection signal="end_level_intro" from="CanvasLayer/Level_intro" to="." method="_on_Level_intro_end_level_intro"]
[connection signal="healed" from="Super_computer" to="." method="_on_Super_computer_healed"]
